apps/safeqbit-local-hq/photoprism/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: photoprism
  labels:
    app.kubernetes.io/name: photoprism
    app.kubernetes.io/managed-by: flux
    cluster: safeqbit-local-hq
    backup.policy/velero: biweekly
